--- a/src/mdb.ui/public/index.html
+++ b/src/mdb.ui/public/index.html
@@ -22,8 +22,8 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Amit Philips - Coder, Blogger</title>
+   
+  <title>Amit Philips - Coder, Blogger</title> -->
 
   <!--Tracking Code for Microsoft Clarity-->
   <script type="text/javascript">
