--- a/src/mdb.ui/public/index.html
+++ b/src/mdb.ui/public/index.html
@@ -25,6 +25,8 @@
    
   <title>Amit Philips - Coder, Blogger</title> -->
 
+  <meta property="og:image" content="https://www.amitphilips.com/assets/person-circle.svg" />
+
   <!--Tracking Code for Microsoft Clarity-->
   <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
