--- a/src/mdb.ui/public/index.html
+++ b/src/mdb.ui/public/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 
 <head>
+  <title>Amit Philips - Coder, Blogger</title>
+
+  <meta property="og:image" content="https://picsum.photos/1000/300" data-rh="true" />
+  <meta property="og:description" content="Test description" data-rh="true" />
+
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <!-- <meta name="description" content="Web site created using create-react-app" /> -->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <!--
@@ -22,8 +27,8 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
- --> 
-  
+ -->
+
 
   <!--Tracking Code for Microsoft Clarity-->
   <script type="text/javascript">
