#49 Added favicon, title and description

--- a/src/mdb.ui/public/index.html
+++ b/src/mdb.ui/public/index.html
@@ -3,15 +3,20 @@
 
 <head>
   <title>Amit Philips - Coder, Blogger</title>
+  <meta property="og:image" content="%PUBLIC_URL%/logo192.png" data-rh="true" />
+  <meta property="og:title" content="Amit Philips - Coder, Blogger" data-rh="true" />
+  <meta property="og:description" content="Amit Philips is a programmer specializing in creating cloud based solutions" data-rh="true" />
+  <meta name="description" content="Amit Philips is a programmer specializing in creating cloud based solutions" data-rh="true" />
+  <meta name="twitter:creator" content="Amit Philips" data-rh="true" />
+  <meta name="twitter:card" content="Blog" data-rh="true" />
+  <meta name="twitter:title" content="Amit Philips - Coder, Blogger" data-rh="true" />
+  <meta name="twitter:description" content="Amit Philips is a programmer specializing in creating cloud based solutions" data-rh="true" />
 
-  <meta property="og:image" content="https://picsum.photos/1000/300" data-rh="true" />
-  <meta property="og:description" content="Test description" data-rh="true" />
 
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <!-- <meta name="description" content="Web site created using create-react-app" /> -->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <!--
