#49 meta tag refinements

--- a/src/mdb.ui/public/index.html
+++ b/src/mdb.ui/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <title>Amit Philips - Coder, Blogger</title>
-  <meta property="og:image" content="%PUBLIC_URL%/logo192.png" data-rh="true" />
+  <meta property="og:image" content="https://www.amitphilips.com/logo192.png" data-rh="true" />
   <meta property="og:title" content="Amit Philips - Coder, Blogger" data-rh="true" />
   <meta property="og:description" content="Amit Philips is a programmer specializing in creating cloud based solutions" data-rh="true" />
   <meta name="description" content="Amit Philips is a programmer specializing in creating cloud based solutions" data-rh="true" />
   <meta name="twitter:creator" content="Amit Philips" data-rh="true" />
-  <meta name="twitter:card" content="Blog" data-rh="true" />
+  <meta name="twitter:card" content="summary" data-rh="true" />
   <meta name="twitter:title" content="Amit Philips - Coder, Blogger" data-rh="true" />
   <meta name="twitter:description" content="Amit Philips is a programmer specializing in creating cloud based solutions" data-rh="true" />
 
